src-less/forms.less
@import "config.less";

.op-slider(@class; @col) {
    input[type="range"].@{class}::-webkit-slider-thumb {
        border-color: @col;
    }
    input[type="range"].@{class}::-moz-range-track {
        background-color: @col;
    }
    input[type="range"].@{class}::-moz-range-thumb {
        border-color: @col;
    }
}

input[type="range"] {
    -webkit-appearance: none;
    width: 100%;
    height: 2px;
    vertical-align: middle;

    &:focus {
        outline: 0;
    }

    .op-colors(background-color);
}

input[type="range"]::-moz-range-track {
    -moz-appearance: none;
    border: 1px solid white;
    height: 2px;
}

input[type="range"]::-webkit-slider-thumb {
    -webkit-appearance: none !important;
    border-radius: 8px;
    background-color: @col-bg;
    border-width: 2px;
    border-style: solid;
    height: 16px;
    width: 16px;
}

input[type="range"]::-moz-range-thumb {
    -moz-appearance: none;
    border-radius: 7px;
    background-color: @col-bg !important;
    border-width: 2px;
    border-style: solid;
    height: 12px;
    width: 12px;
}

.op-slider(op-sd; @op-col-sd);
.op-slider(op-inset; @op-col-inset);
.op-slider(op-stretch; @op-col-stretch);
.op-slider(op-reflect; @op-col-reflect);
.op-slider(op-tilt; @op-col-tilt);
.op-slider(op-scale; @op-col-scale);
.op-slider(op-shift; @op-col-shift);

input[type="text"], input[type="password"], input[type="submit"], input[type="button"] {
    width: 300px;
    height: 40px;
    font-size: 28px;
    font-family: "Abel";
    line-height: 36px;
    text-align: center;
    text-transform: uppercase;
    background: transparent;
    color: @col-form;
    border: 2px solid @col-form;
}

input[type="submit"], input[type="button"] { cursor: pointer; }
input[disabled="true"] {
    color: @op-col-disabled;
    border: 2px solid @op-col-disabled;
}

